<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
    <ImageView
            android:id="@+id/imageMovie"
            android:layout_width="@dimen/image_widthMedium"
            android:layout_height="@dimen/image_heightMedium"
            />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/titleMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textSize="16dp"
                android:textColor="@color/white"/>
        <TextView
                android:id="@+id/dateMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/patterDate"
                android:textColor="@color/white"/>

        <TextView android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:hint="@string/genres"/>

        <TextView android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:hint="@string/note"/>

        <TextView android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:hint="@string/language"/>

        <TextView android:id="@+id/adult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:hint="@string/adult"/>



    </LinearLayout>

</LinearLayout>